# analytical-data-analysis

./: .gitignore  README.md  main.py  pyproject.toml
1-Apriori/: apriori.ipynb
2-AssociationRulesSearch/: association-rules.ipynb
3-DecisionTree/: decision-tree.ipynb
4-EnsembleClassification/: ensemble.ipynb
