[project]
name = "AnalyticalDataAnalys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "mlxtend>=0.24.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyfim>=6.28",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
